# dev-identity-secrets-reference

./: .detect-secrets-config.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline.example  .secretsignore  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
bootstrap/: README.md
dev/: .env.example  Makefile  README.md  demo.sh  docker-compose.yml
diagrams/: 01-reference-architecture.md  01-reference-architecture.mmd  02-developer-credential-flow.md  02-developer-credential-flow.mmd  03-runtime-secret-delivery.md  03-runtime-secret-delivery.mmd  04-attack-tree-secret-compromise.mmd  04-decision-tree.md  05-incident-response-flow.mmd
docs/: 01-scope-purpose.md  02-reference-architecture.md  03-dev-environment-architecture.md  04-user-stories.md  05-mvp-plan.md  06-controls-and-guardrails.md  07-threat-model.md  08-decision-log.md  09-runbooks.md  11-references.md  (+18 more)
lib/python/: README.md  pyproject.toml
lib/python/secrets_sdk/: __init__.py  cli.py  config.py  exceptions.py  models.py  rotation.py  sops.py  vault.py
lib/python/secrets_sdk/mesh/: README.md  __init__.py  cache.py  env_provider.py  file_provider.py  mesh.py  provider.py  vault_provider.py
lib/python/secrets_sdk/sirm/: __init__.py  bootstrap.py  context.py  evidence.py  models.py  reporter.py  session.py  timeline.py
lib/python/tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_mesh.py  test_models.py  test_rotation.py  test_sirm.py  test_sops.py  test_vault.py
(+310 files in other folders)
